Fixed bug : overlapping again

--- a/frontend/src/assets/scss/styles/chat.scss
+++ b/frontend/src/assets/scss/styles/chat.scss
@@ -775,8 +775,7 @@ $top__and__actions: 62px;
   // }
 
   .chat__card {
-    // width: 100vw;
-    // height: 100%;
+    height: 90vh;
     border-radius: 0;
     grid-template-columns: auto;
 
